fixed arrows on mobile, removed swipe listener

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html{
   background: var(--primary-gradient);
   width:100%;
   height:100%;
-  font-size:0.6em;
+  font-size:0.7em;
 
 }
 
